--- a/Chaoer_ContentCanal/Chaoer_ContentCanal/mBankCarViewController.xib
+++ b/Chaoer_ContentCanal/Chaoer_ContentCanal/mBankCarViewController.xib
@@ -69,7 +69,7 @@
                                 <constraint firstAttribute="height" constant="1" id="Rmf-Ah-Wjh"/>
                             </constraints>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="4465456465" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YCB-Ro-pay">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="4465456465" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YCB-Ro-pay">
                             <rect key="frame" x="66" y="85" width="246" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="OCs-jr-e8y"/>
@@ -103,7 +103,7 @@
                             <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="身份证" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ieC-I7-sE3">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="网点" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ieC-I7-sE3">
                             <rect key="frame" x="8" y="85" width="45" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="Pns-At-hUa"/>
