--- a/Chaoer_ContentCanal/Chaoer_ContentCanal/marketFooterView.xib
+++ b/Chaoer_ContentCanal/Chaoer_ContentCanal/marketFooterView.xib
@@ -110,6 +110,9 @@
                             <state key="normal">
                                 <color key="titleColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
+                            <connections>
+                                <action selector="mNavBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="fwB-Fy-UNb"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -163,6 +166,9 @@
                             <state key="normal">
                                 <color key="titleColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
+                            <connections>
+                                <action selector="mPhoneBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="KKP-fm-umb"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
