modify fix order check image

--- a/Chaoer_ContentCanal/Chaoer_ContentCanal/WithdrawViewController.xib
+++ b/Chaoer_ContentCanal/Chaoer_ContentCanal/WithdrawViewController.xib
@@ -141,7 +141,7 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="osN-U5-yoh">
                     <rect key="frame" x="10" y="360" width="300" height="40"/>
-                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.52941176469999995" green="0.75686274509999996" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="bfg-QW-k9b"/>
                     </constraints>
