--- a/Chaoer_ContentCanal/Chaoer_ContentCanal/mLoginView.xib
+++ b/Chaoer_ContentCanal/Chaoer_ContentCanal/mLoginView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -11,16 +11,16 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="389"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_yellow" translatesAutoresizingMaskIntoConstraints="NO" id="BwB-QL-0YG">
-                    <rect key="frame" x="110" y="30" width="100" height="60"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon111" translatesAutoresizingMaskIntoConstraints="NO" id="BwB-QL-0YG">
+                    <rect key="frame" x="110" y="30" width="100" height="100"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="deD-5o-1iZ"/>
-                        <constraint firstAttribute="height" constant="60" id="vuq-4b-6tg"/>
+                        <constraint firstAttribute="height" constant="100" id="vuq-4b-6tg"/>
                     </constraints>
                 </imageView>
                 <textField opaque="NO" clipsSubviews="YES" alpha="0.45000000000000001" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入账户名" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="p1o-ZB-sCh">
-                    <rect key="frame" x="40" y="113" width="240" height="40"/>
+                    <rect key="frame" x="40" y="153" width="240" height="40"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="tintColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -31,14 +31,14 @@
                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4sc-nI-U8T">
-                    <rect key="frame" x="40" y="154" width="240" height="1"/>
+                    <rect key="frame" x="40" y="194" width="240" height="1"/>
                     <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="0.30086206896551726" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="8cb-BJ-Yj0"/>
                     </constraints>
                 </view>
                 <textField opaque="NO" clipsSubviews="YES" alpha="0.45000000000000001" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="cd0-vw-3Br">
-                    <rect key="frame" x="40" y="173" width="240" height="40"/>
+                    <rect key="frame" x="40" y="213" width="240" height="40"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="tintColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -49,14 +49,14 @@
                     <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wbo-81-Zdz">
-                    <rect key="frame" x="40" y="214" width="240" height="1"/>
+                    <rect key="frame" x="40" y="254" width="240" height="1"/>
                     <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="0.30086206900000001" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="f1G-xV-eJP"/>
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w8W-lU-T8l">
-                    <rect key="frame" x="185" y="230" width="105" height="29"/>
+                    <rect key="frame" x="185" y="270" width="105" height="29"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="105" id="S8r-cu-LMQ"/>
@@ -69,7 +69,7 @@
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sa5-xr-U7S">
-                    <rect key="frame" x="20" y="270" width="280" height="45"/>
+                    <rect key="frame" x="20" y="310" width="280" height="45"/>
                     <color key="backgroundColor" red="0.52941176469999995" green="0.75686274509999996" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="Moq-6m-itz"/>
@@ -117,6 +117,6 @@
         </view>
     </objects>
     <resources>
-        <image name="logo_yellow" width="145" height="93"/>
+        <image name="Icon111" width="228" height="228"/>
     </resources>
 </document>
